--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section>
             <h1>We Care</h1>
             <h2>About Your Pet</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit corporis laudantium, laborum explicabo
+            <p>Lorem ipsum dolor sit amet dasdas consectetur adipisicing elit. Odit corporis laudantium, laborum explicabo
                 consequatur earum? Expedita doloribus adipisci voluptates accusamus amet quae delectus beatae
                 laboriosam.</p>
             <button class="button-explore">EXPLORE</button>
